2013-08-04  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS: Add NEWS entries.

2013-08-04  Nicolas François  <nicolas.francois@centraliens.net>

	* man/po/da.po: Fix translation (--home became --home-dir).
	* man/po/de.po: Likewise.
	* man/po/fr.po: Likewise.
	* man/po/pl.po: Likewise.
	* man/po/ru.po: Likewise.
	* man/po/sv.po: Likewise.

2013-08-04  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/groupio.c (merge_group_entries): Do not allocate more than
	necessary (sizeof char* instead of char).
	Thanks for Tomáš Mráz (alioth#313962)
	* lib/groupio.c (merge_group_entries): Document that new_members
	is correctly NULL terminated. (alioth:#313940)

2013-08-03  Nicolas François  <nicolas.francois@centraliens.net>

	* Changelog: Update documentation of 2013-07-28  mancha entry.
	* lib/prototypes.h, lib/encrypt.c: Update splint marker,
	pw_encrypt can return NULL.
	* lib/encrypt.c: Fix outdated statement on GNU crypt.
	* src/chgpasswd.c: Improve diagnostic to user when pw_encrypt
	fails and use fail_exit() instead of exit().
	* src/chpasswd.c: Likewise.
	* src/newusers.c: Likewise.
	* src/passwd.c: Likewise when new password is encrypted.
	* src/newgrp.c: Improve diagnostic to user and syslog when
	pw_encrypt fails.  Do not apply 1s penalty as this is not an
	invalid password issue.
	* src/passwd.c: Likewise when password is checked.

2013-08-02  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/setupenv.c: xstrdup the static char* temp_pw_dir /
	temp_pw_shell. That way we can continue to use pw_free() without
	segving. Thanks to Serge Hallyn for the patch.
	* libmisc/setupenv.c: Free pw_dir and pw_shell before reallocating
	them.

2013-08-01  Yuri Kozlov  <yuray@komyakino.ru>

        * po/ru.po: completed translation
	  Closes: Debian#718356

2013-07-29  Michael Scherer <misc-guest@alioth.debian.org>

        * libmisc/root_flag.c: use chdir() before calling chroot() to
	  avoid potential security issue (see